--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,17 +14,24 @@ $color6: #544cac;
     line-height: $h;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 body {
-    background-color: $color1;
+    background-color: #ffffff;
 }
 .header {
     display: flex;
-    margin: 0 auto; 
-    width: 1110px;
     height: 45.35px;
     background-color: $color1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
     .header-content {
         display: flex;
+        margin: 0 auto; 
         width: 1110px;
         height: 45.35px;
         justify-content: space-around;
@@ -88,6 +95,7 @@ body {
 .section-welcome {
     display: flex;
     height: 647px;
+    background-color: $color1;
     .section-welcome__content {
         display: flex;
         margin: 0 auto;
@@ -850,5 +858,98 @@ body {
     }
     .section-price__button:hover {
         background-color: #544cac;
+    }
+}
+.section-footer {
+    display: flex;
+    align-items: end;
+    background-color: #dbe1ff;
+    height: 425px;
+    border-radius: 30px 30px 0 0;
+    .section-footer__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+        width: 1110px;
+        height: 300px;
+    }
+    .section-footer__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 163px;
+    }
+    .section-footer__items {
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .section-footer__item-title {
+        text-decoration: none;
+        color: $color2;
+        font-family: 'Oswald',sans-serif;
+        @include font(400, 24px, 26px);
+        margin-bottom: 10px;
+    }
+    .section-footer__item {
+        text-decoration: none;
+        color: $color5;
+        font-family: 'Open Sans', sans-serif;
+        @include font(400, 16px, 26px);
+    }
+    .section-footer__bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 60px;
+        width: 1110px;
+    }
+    .section-footer__line {
+        width: 1110px;
+        height: 2px;
+        border-radius: 2px;
+        background-color: #625bae;
+    }
+    .section-footer__navigations {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .section-footer__tabs {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 601px;
+        height: 19px;
+    }
+    .section-footer__tab {
+        text-decoration: none;
+        color: $color2;
+        font-family: 'Open Sans', sans-serif;
+        @include font(600, 12px, 26px);
+    }
+    .section-footer__socials {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 142px;
+        height: 30px;
+    }
+    .section-footer__socials-tab {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 29px;
+        height: 29px;
+        background-color: #ffffff;
+        border-radius: 50px;
+        transition: background-color 0.3s;
+    }
+    .section-footer__socials-tab:hover {
+        background-color: #5f59be;
     }
 }
